--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.1.x"
+        "illuminate/support": "4.1.x",
+        "guzzlehttp/guzzle": "~4"
     },
     "autoload": {
         "classmap": [
