--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "~6"
+        "illuminate/support": "~5|^8.0|^9.0",
+        "guzzlehttp/guzzle": "~6|^7.5"
     },
     "autoload": {
         "classmap": [
