--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5|^8.0|^9.0",
+        "illuminate/support": "~5|^6.0|^7.0|^8.0|^9.0",
         "guzzlehttp/guzzle": "~6|^7.5"
     },
     "autoload": {
